--- a/style.css
+++ b/style.css
@@ -26,4 +26,30 @@
 .header h1 {
     font-size: 40px;
     margin-bottom: 10px;
+    /* width: 100%; */
+}
+
+#img-div {
+    padding: 0px 100px;
+    /* margin: 10px; */
+    background-color: #ffff;
+    width: 98%;
+    margin: 10px;
+    /* margin: 100px; */
+
+}
+
+#img-div img {
+    object-fit: contain;
+    /* max-width: ; */
+    display: block;
+
+    margin: 10px;
+}
+
+#img-caption {
+    margin: 10px;
+    width: 100%;
+    text-align: center;
+    font-size: 20px;
 }
