--- a/style.css
+++ b/style.css
@@ -92,3 +92,19 @@
     justify-content: center;
     align-items: center;
 }
+
+/* #additional-link {
+    padding: 10px;
+    display: flex;
+
+} */
+#additional-link {
+    margin: 0px 10px 50px 10px;
+}
+
+#additional-link h2 {
+    font-size: 20px;
+    font-weight: 400;
+    text-align: center;
+
+}
